--- a/www/form.html
+++ b/www/form.html
@@ -326,7 +326,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="cordova.js"></script> 
+    <script src="cordova.js"></script> 
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>    
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.validate.min.js" type="text/javascript"></script>    
@@ -378,7 +378,7 @@ function LoadPageData(){
 		url: "https://opticoat.com/opt_app/ajax203.php?handler=getWarrantyPreload",
 		data: fromData,
 		dataType: 'json',
-		beforeSend: function() { $("<div />").addClass("formOverlay ").appendTo('body');   },
+		beforeSend: function() { $('<div class="formOverlay"><i class="tempLoader fa fa-circle-notch fa-spin"></i></div>').appendTo('body');   },
 		complete: function() { $("div.formOverlay").remove(); },
 	}).done(function(data){
 
@@ -650,7 +650,7 @@ $(document).ready(function() {
 				url: "https://opticoat.com/opt_app/ajax203.php?handler=addWarranty",
 				data: formData,
 				dataType: 'json',
-				beforeSend: function() { $("<div />").addClass("formOverlay ").appendTo('body');   },
+				beforeSend: function() { $('<div class="formOverlay"><i class="tempLoader fa fa-circle-notch fa-spin"></i></div>').appendTo('body');   },
 				complete: function() { $("div.formOverlay").remove(); },
 			}).done(function(data){
 			
@@ -698,46 +698,3 @@ $(document).ready(function() {
 
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
