--- a/www/form.html
+++ b/www/form.html
@@ -146,7 +146,7 @@
                   <div class="field-group input-group mb-3">
                     <input type="text" class="form-control" placeholder="VIN/Chassis Number" name="vehicle_vin" id="vehicle_vin" required>
                     <div class="input-group-append">
-                      <button class="btn btn-outline-secondary" type="button"><i class="fas fa-barcode"></i></button>
+                      <button class="btn btn-outline-secondary" id="btnBarcode" type="button"><i class="fas fa-barcode"></i></button>
                     </div>
                   </div>
                   <div class="form-group">
