--- a/www/form.html
+++ b/www/form.html
@@ -568,6 +568,8 @@ $(document).ready(function() {
 		try {
 			//cordova.plugins.barcodeScanner.scan(QRonSuccess, QRFailure);
 			window.plugins.VINBarcodeScanner.scan(QRonSuccess, QRFailure);
+			cordova.exec(QRonSuccess, QRFailure, 'VinBarScanner', 'scan', []);
+			
 		} catch (err) {
 			alert_error('Barcode Scanner Failed, please check app permissions. ' + err, 'Scanner Error');
 		}
