--- a/www/login.html
+++ b/www/login.html
@@ -92,6 +92,7 @@ $(document).ready(function() {
 
 					localStorage.setItem('DealerId', data.Dealerid);
 					localStorage.setItem('DealerClass', data.DealerClass);
+					localStorage.setItem('Country', data.Country);
 
 					/*if (localStorage.getItem('DealerClass') == 'Dealership')
 						$("#sp_Dealership").show();
